2025-08-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/qt/qtdensity.pro: Add two commented-out lines which
	may aid in some settings

2025-04-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.19

2025-04-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/tools/RInsideEnvVars.r: Allow double quotes in env.var

2025-03-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/sandboxed_server/example_server.cpp: Remove obsolete
	test for C++11 use in server
	* inst/examples/standard/rinside_sample17.cpp: Idem, dos2unix'ed

2024-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-05-24  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2023-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/sandboxed_server/README.md: Add README noting need to
	rebuild RInside with `RINSIDE_CALLBACKS` defined

2023-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2023-03-14  Joris Goosen  <joris@jorisgoosen.nl>

	* inst/examples/qt/cmake/CMakeLists.txt: Refine qt6 change
	* inst/examples/qt/README: Idem

2023-03-13  Joris Goosen  <joris@jorisgoosen.nl>

	* inst/examples/qt/qtdensity.cpp: Update to qt6
	* inst/examples/qt/cmake/CMakeLists.txt: Idem
	* inst/examples/qt/README: Idem

2023-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.18

	* src/Makevars ($(USERLIB)): Use relative file location in
	install_name_tool call, additional checks for when to call

	* README.md: Update several URLs to https://

2023-01-31  Dominick Samperi  <djsamperi@gmail.com>

	* src/RInside.cpp: Switch to run_Rmainloop()

2022-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3
